urnik/static/stil.css
/* general */
.padded {
    padding: 5px;
}

.vertical-space {
    height: 2000px; /* allows zoom out on mobile */
}

.nobr { white-space: nowrap }

.pagination li.active {
    background-color: #26a69a;
    cursor: pointer;
}

.pagination li:not(.disabled):not(.active):hover {
    background-color: #eee;
}

.switch a:not(.btn) {
    margin: 0 !important;
}

hr.separator {
    border: 0;
    border-top: 1px solid rgba(160,160,160,0.4);
    height: 0;
}

.disclaimer {
    color: #999;
    font-size: 0.8em;
    line-height: 1.3em;
    margin-top: -5px;
}

code {
    background: #e0e0e0;
    display: inline-block;
    padding: 2px;
    border-radius: 2px;
}
span.tripple-icon {
    position: relative;
    height: 48px;
    line-height: 48px;
    width: 24px;
}
span.tripple-icon i {
    position: absolute;
    background: white;
    border-radius: 3px;
    border: 1px solid;
}
span.tripple-icon i:nth-child(1) {
    left: 3px;
    bottom: calc(50% + 6px - 16px);
    /*color: rgba(0,255,0,0.5);*/
}
span.tripple-icon i:nth-child(2) {
    left: 0px;
    bottom: calc(50% + 3px - 16px);
    /*color: rgba(255,0,0,0.5);*/
}
span.tripple-icon i:nth-child(3) {
    left: -3px;
    bottom: calc(50% - 16px);
    /*color: rgba(0,0,255,0.5);*/
}

dt {
    font-weight: bold;
    margin-top: 10px;
}

/* navigation and such */
nav {
    background-color: #555;
}

#urnik-logo {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    transform: none;
    left: 250px;
    right: 150px;
}
@media only screen and (max-width: 992px) {
    #urnik-logo {
        left: 150px;
        right: 150px;
    }
}
@media only screen and (max-width: 600px) {
    #urnik-logo {
        left: 108px;
        right: 75px;
        text-align: left;
    }
}
#urnik-logo i {
    display: inline;
    float: none;
    margin-right: 5px;
}
#menu-button {
    display: block;
}
#menu-button span {
    vertical-align: middle;
    font-size: 20pt;
    height: 64px;
    line-height: 64px;
    display: block;
    float: right;
    margin-left: 16px;
    margin-right: 16px;
}
#menu-button i {
    display: inline-block;
}
.side-icon {
    margin: 0 32px 0 0;
    color: rgba(0,0,0,0.54);
    float: left;
}
.side-nav, #sidenav-overlay {
    top: 64px;
}

.dropdown-content li > a {
    color: #039be5;
}

.dropdown-content li.disabled, .dropdown-content li.disabled > a {
    color: #5e5e5e;
    cursor: default;
}

#search-wrapper {
    padding: 0px 0px 5px 5px;
    overflow: hidden;
}
#search-wrapper input[type="search"] {
    padding-left: 2.5rem;
    width: calc(100% - 2.5rem);
    height: 64px;
}
#search-wrapper input[type="search"]:focus {
    border-bottom: 1px solid #039be5;
    box-shadow: 0 1px 0 0 #039be5;
}
@media only screen and (max-width: 600px) {
    #search-wrapper input[type="search"]::placeholder {
        color: transparent;
    }
    #search-wrapper input[type="search"] {
        height: 56px;
    }
}
#search-wrapper form label {
    margin-top: -12px;
    margin-left: -16px;
}
#search-wrapper form label i {
    font-size: 28px;
    color: #fff;
}
#search-wrapper ul.autocomplete-content {
    margin-bottom: 0px;
}

#search-wrapper ul.autocomplete-content li {
    min-height: 0px;
    padding: 5px;
}
#search-wrapper ul.autocomplete-content li > span {
    font-weight: normal;
    padding: 3px 5px;
    font-size: 14px;
    color: rgba(0,0,0,0.87);
}
#search-wrapper ul.autocomplete-content li > span > span.highlight {
    color: #039be5;
}
#admin-dropdown .dropdown-button {
    display: inline-block;
    padding: 0 10px;
}
#admin-dropdown .dropdown-button #user-name {
    margin-right: 15px;
}
#admin-dropdown .dropdown-button #dropdown-arrow {
    margin-left: 5px;
}
#admin-dropdown .dropdown-button #mode-indicator {
    margin-left: 0px;
}

/* urnik */
.urnik-wrapper {
    position: absolute;
    min-width: 1024px;
    min-height: 600px;
    top: 64px;
    bottom: 0px;
    width: 100%;
}

#urnik {
    position: absolute;
    left: 2.5%;
    top: 2.5%;
    width: 78%;
    height: 95%;
    background: white;
}

#urnik.cel {
    width: 95%;
}

.right-panel {
    position: absolute;
    left: 81.4%;
    top: 0%;
    width: 18%;
    height: 100%;
}

#informacije {
    background: #fff;
    overflow-y: auto;
    overflow-x: hidden;
}

#informacije .collapsible-header {
    white-space: nowrap;
}

#informacije .collapsible-body {
    padding: 5px 20px;
}

#informacije .collapsible-body .collection-item {
    padding: 5px 0px;
}

#dnevi {
    position: absolute;
    left: 3%;
    top: 0%;
    width: 97%;
    height: 100%;
    color: #333;
}

#ure {
    position: absolute;
    left: 0%;
    top: 5%;
    width: 100%;
    height: 95%;
    color: #333;
}

.poravnaj-na-termine {
    position: absolute;
    left: 3%;
    top: 5%;
    width: 97%;
    height: 95%;
}

.ura {
    position: absolute;
    border-bottom: solid 1px #ddd;
    width: 100%;
}

.ura span {
    width: 3%;
    text-align: right;
    position: relative;
    display: block;
    bottom: -1.5em;
    padding-right: 0.25em;
}

.dan {
    position: absolute;
    text-align: center;
    top: 0;
    bottom: 0;
    border-left: solid 1px #ddd;
    width: 20%;
}

/* pozicioniranje srečanj */
.srecanje-absolute-box {
    position: absolute;   /* spodaj je pixel perfect pozicioniranje boxov */
    padding-top: 3px;     /* izberi si koliko želiš margin od roba "dneva" */
    padding-bottom: 4px;  /* = top + 1, ker imamo spodaj 1px borderr */
    padding-left: 3px;    /* izberi si spacing med srecanji */
    padding-right: 0px;   /* vazna je samo vsota left + right, zato right = 0  */
}

#informacije .srecanje-absolute-box {
    position: relative;
    height: 70px;
}

.srecanje-absolute-box.leftmost {
    padding-left: 4px;  /* postavi levi rob od dneva na top + 1 = right + 1, ker imamo 1px borderja */
}

.srecanje-absolute-box.rightmost {
    padding-right: 3px;  /* postavi desni rob od dneva na top */
}
/* ... */

